попытка перенаправить запросы backend

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"build": "react-scripts build",
 		"stylelint": "stylelint \"src/**/*.css\" --fix"
 	},
-	"proxy": "https://app-react-nodejs-backend.vercel.app:1337",
+	"proxy": "https://app-react-nodejs-backend.vercel.app",
 	"eslintConfig": {
 		"extends": [
 			"react-app",
